--- a/index.html
+++ b/index.html
@@ -38,10 +38,28 @@
             <a href="#" data-page="index-search.html"><i class="fa fa-search"></i><span>Search</span></a>
             <a href="#" data-menu="menu-settings"><i class="fa fa-cog"></i><span>Settings</span></a>
         </div>
-        <div id="footer-audio" class="footer-bar-2 d-none">
-            <audio id="audio-player" class="w-100 bg-opacity-10 shadow-sm p-2 rounded-3" controls>
-                <source id="audio-source" src="" type="audio/mpeg" />
-            </audio>
+        <audio id="audio-player" class="d-none " controls>
+            <source id="audio-source" src="" type="audio/mpeg" />
+        </audio>
+        <div id="footer-audio" class="footer-bar-2 align-items-center p-3 d-none bg-primary rounded-top">
+            <div id="" class="track-item w-50px " data-item="image">
+                <div class="skeleton shadow-0 card m-3 card-style"></div>
+            </div>
+            <div class="d-flex w-75 p-2 text-start flex-column">
+                <h3 id="" data-item="title" class="track-item text-truncate text-white mb-0">
+                    <span class="skeleton w-100 h-40px shadow-0 card mb-2"></span>
+                </h3>
+                <p id="" data-item="minister" class="track-item mb-0">
+                    <span class="skeleton h-20px shadow-0 card mb-2"></span>
+                </p>
+            </div>
+            <div class="w-15 p-2">
+                <i class="track-play fa fa-play text-white font-35 p-0 "></i>
+            </div>
+            <div id="seek-bar-container">
+                <input type="range" id="seek-bar" class="mt-2 p-0 rounded" value="0" max="100" />
+                <div class="progress"></div>
+            </div>
         </div>
         <div id="page-main"></div>
         <!-- End of Page Content-->
